// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/CombinedSystemMessage should match snapshot 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <span
      key="0"
    >
      <span
        data-mention="AddedUser1"
        key="0"
      >
        <Connect(AtMention)
          hasMention={true}
          isRHS={false}
          mentionName="AddedUser1"
        >
          @AddedUser1
        </Connect(AtMention)>
      </span>
       
      <strong
        key="2"
      >
        added to the channel
      </strong>
       by 
      <span
        data-mention="User1."
        key="4"
      >
        <Connect(AtMention)
          hasMention={true}
          isRHS={false}
          mentionName="User1."
        >
          @User1.
        </Connect(AtMention)>
      </span>
    </span>
    

    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <span
      key="0"
    >
      You were 
      <strong
        key="1"
      >
        added to the channel
      </strong>
       by 
      <span
        data-mention="User1."
        key="3"
      >
        <Connect(AtMention)
          hasMention={true}
          isRHS={false}
          mentionName="User1."
        >
          @User1.
        </Connect(AtMention)>
      </span>
    </span>
    

    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channelcurrent_user_id"
  >
    <span
      key="0"
    >
      <span
        data-mention="AddedUser2"
        key="0"
      >
        <Connect(AtMention)
          hasMention={true}
          isRHS={false}
          mentionName="AddedUser2"
        >
          @AddedUser2
        </Connect(AtMention)>
      </span>
       
      <strong
        key="2"
      >
        added to the channel
      </strong>
       by you.
    </span>
    

    <br />
  </React.Fragment>
</React.Fragment>
`;

exports[`components/post_view/CombinedSystemMessage should match snapshot when join leave messages are turned off 1`] = `
<React.Fragment>
  <React.Fragment
    key="system_add_to_channeluser_id_1"
  >
    <span
      key="0"
    >
      You were 
      <strong
        key="1"
      >
        added to the channel
      </strong>
       by 
      <span
        data-mention="User1."
        key="3"
      >
        <Connect(AtMention)
          hasMention={true}
          isRHS={false}
          mentionName="User1."
        >
          @User1.
        </Connect(AtMention)>
      </span>
    </span>
    

    <br />
  </React.Fragment>
  <React.Fragment
    key="system_add_to_channelcurrent_user_id"
  >
    <span
      key="0"
    >
      <span
        data-mention="AddedUser2"
        key="0"
      >
        <Connect(AtMention)
          hasMention={true}
          isRHS={false}
          mentionName="AddedUser2"
        >
          @AddedUser2
        </Connect(AtMention)>
      </span>
       
      <strong
        key="2"
      >
        added to the channel
      </strong>
       by you.
    </span>
    

    <br />
  </React.Fragment>
</React.Fragment>
`;
